--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div class="container">
-        <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #2c3e50;">
-            ML Prediction: <span style="font-size: 0.8em; color: #7f8c8d;">Daily Max Temperature Forecast</span>
+        <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#2c3e509f;">
+            ML Prediction: <span style="font-size: 0.8em; color: #e98e10f1;">Daily Max Temperature Forecast</span>
             明日は暑い？寒い？
         </h2>
         
@@ -34,7 +34,7 @@
         <label for="lag3">Max Temp 3 days ago (℃):３日前の最高気温</label>
         <input type="number" step="0.1" id="lag3" value="22.0">
 
-        <button onclick="predict()">Predict Tomorrow's Max Temperature</button>
+        <button onclick="predict()">Predict Tomorrow's Max Temperature: さて、明日の最高気温は？</button>
 
         <div id="result"></div>
     </div>
